--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,8 @@
 sudo: false
 language: cpp
 os:
-  - linux
+  - osx
 compiler:
-  - gcc
   - clang
 
 matrix:
@@ -16,8 +15,6 @@ matrix:
 
 env:
   matrix:
-    - BUILD_TYPE="Debug" SERVER_ONLY="OFF"
-    - BUILD_TYPE="Debug" SERVER_ONLY="ON"
     - BUILD_TYPE="Release" SERVER_ONLY="OFF"
     - BUILD_TYPE="Release" SERVER_ONLY="ON"
 
