Fix iOS compilation

--- a/lib/mcpp/CMakeLists.txt
+++ b/lib/mcpp/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 2.6)
 if (UNIX OR MINGW)
     add_definitions(-O3)
+    if (APPLE)
+        add_definitions(-D_DARWIN_C_SOURCE)
+    endif()
 endif()
 add_definitions(-DMCPP_LIB)
 add_definitions(-DHAVE_CONFIG_H)
