--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,7 +132,10 @@ endif()
 
 if(USE_GLES2)
     add_definitions(-DUSE_GLES2)
-    add_definitions(-D_IRR_COMPILE_WITH_OGLES2_ -DNO_IRR_COMPILE_WITH_OPENGL_)
+    if (NOT IOS)
+        add_definitions(-D_IRR_COMPILE_WITH_OGLES2_)
+    endif()
+    add_definitions(-DNO_IRR_COMPILE_WITH_OPENGL_)
 endif()
 
 if(SERVER_ONLY)
