Added support for Haiku operating system
* OpenGL and SDL2 are used
* Added Haiku platform in Irrlicht configurations
* Added support for Haiku in AngelScript
* Fixed multiple assertions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,14 +177,12 @@ endif()
 add_subdirectory("${PROJECT_SOURCE_DIR}/lib/bullet")
 include_directories("${PROJECT_SOURCE_DIR}/lib/bullet/src")
 
-if(WIN32)
+if(WIN32 OR CMAKE_SYSTEM_NAME MATCHES "BSD")
     set(LIBRESOLV_LIBRARY)
+elseif (HAIKU)
+    find_library(LIBRESOLV_LIBRARY NAMES network socket)
 else()
-    if (NOT CMAKE_SYSTEM_NAME MATCHES "BSD")
-        find_library(LIBRESOLV_LIBRARY NAMES resolv libresolv)
-    else()
-        set(LIBRESOLV_LIBRARY)
-    endif()
+   find_library(LIBRESOLV_LIBRARY NAMES resolv libresolv)
 endif()
 
 # Find system ENet library or build it if missing
@@ -317,7 +315,7 @@ include_directories("${PROJECT_SOURCE_DIR}/lib/irrlicht/include")
 # of the added include directory.
 if(USE_WIIUSE)
     # Find system WiiUse library or build it if missing
-    if((UNIX AND NOT APPLE) AND USE_SYSTEM_WIIUSE)
+    if((UNIX AND NOT (APPLE OR HAIKU)) AND USE_SYSTEM_WIIUSE)
         find_package(WiiUse)
     endif()
 
