--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,8 +159,9 @@ endif()
 
 if(UNIX OR MINGW)
     if(DEBUG_SYMBOLS)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
+#        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -g")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread  -g")
     endif()
 endif()
 
@@ -616,6 +617,12 @@ target_link_libraries(supertuxkart
     ${CURL_LIBRARIES}
     ${LIBRESOLV_LIBRARY}
     ${MCPP_LIBRARY}
+    X11
+    z
+    png
+    jpeg
+    bz2
+
     )
 
 if (USE_SQLITE3)
