--- a/data/supertuxkart.desktop
+++ b/data/supertuxkart.desktop
@@ -6,6 +6,7 @@ GenericName[da]=Et kart racerspil
 GenericName[de]=Ein Kart-Rennspiel
 GenericName[fr]=Un jeu de karting
 GenericName[gl]=Xogo de carreiras con karts
+GenericName[he]=משחק מירוצי עגלות
 GenericName[pl]=Wyścigi gokartów
 GenericName[ro]=Un joc de curse cu carturi
 Exec=supertuxkart
