Add gamerzilla support to achievements. (#4386)
* Add gamerzilla support to achievements.

* Move all gamerzilla code into one file. Should we want to support another achievement system like Steam, it can be isolated to the WebAchievementsStatus class.

* Add WebAchievementsStatus files.

* Add version number to achievements file. Update graphics. Generate achievement list from internal system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -742,6 +742,19 @@ if(MINGW)
 endif()
 
 
+# Find LibGamerzilla library or build it if missing
+if (NOT APPLE)
+    include(FindPkgConfig)
+    pkg_search_module(GAMERZILLA OPTIONAL gamerzilla)
+
+    if (GAMERZILLA_LIBRARIES)
+        message(STATUS "Gamerzilla found")
+        include_directories(${GAMERZILLA_INCLUDE_DIRS})
+        target_link_libraries(supertuxkart ${GAMERZILLA_LIBRARIES})
+        add_definitions(-DGAMERZILLA)
+    endif()
+endif()
+
 # ==== Checking if data folder exists ====
 if(NOT IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/data)
   message( FATAL_ERROR "${CMAKE_CURRENT_SOURCE_DIR}/data folder doesn't exist" )
