Mac M1 build fix proposal avoiding mixing up with homwbrew for Rosetta as well.

--- a/lib/enet/CMakeLists.txt
+++ b/lib/enet/CMakeLists.txt
@@ -25,8 +25,8 @@ else()
 endif()
 
 if(APPLE AND NOT IOS)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -arch x86_64")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -arch x86_64 -F/Library/Frameworks")
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -arch ${ARCHFLAGS}")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -arch ${ARCHFLAGS} -F/Library/Frameworks")
 endif()
 
 if(HAS_FCNTL)
