--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,11 +42,21 @@ CMAKE_DEPENDENT_OPTION(USE_WIIUSE "Support for wiimote input devices" ON
     "NOT SERVER_ONLY;NOT CYGWIN" OFF)
 
 if(APPLE AND NOT IOS)
-    list(APPEND CMAKE_PREFIX_PATH /usr/local/opt)
-    include_directories(/usr/local/opt/openssl@1.1/include/)
-    include_directories(/usr/local/opt/openssl@1.1/include/openssl/)
-    include_directories(/usr/local/opt/freetype/include/freetype2/)
-    include_directories(/usr/local/opt/harfbuzz/include/harfbuzz/)
+    if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "arm")
+	set(ARCHFLAGS "arm64")
+	list(APPEND CMAKE_PREFIX_PATH /opt/homebrew/opt)
+	include_directories(/opt/homebrew/opt/openssl@1.1/include/)
+	include_directories(/opt/homebrew/opt/openssl@1.1/include/openssl/)
+	include_directories(/opt/homebrew/opt/freetype/include/freetype2/)
+	include_directories(/opt/homebrew/opt/harfbuzz/include/harfbuzz/)
+    else()
+	set(ARCHFLAGS "${CMAKE_SYSTEM_PROCESSOR}")
+	list(APPEND CMAKE_PREFIX_PATH /usr/local/opt)
+	include_directories(/usr/local/opt/openssl@1.1/include/)
+	include_directories(/usr/local/opt/openssl@1.1/include/openssl/)
+	include_directories(/usr/local/opt/freetype/include/freetype2/)
+	include_directories(/usr/local/opt/harfbuzz/include/harfbuzz/)
+    endif()
 endif()
 
 if (IOS)
@@ -317,8 +327,8 @@ endif()
 include_directories(${STK_SOURCE_DIR})
 
 if(APPLE AND NOT IOS)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -arch x86_64")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -arch x86_64 -F/Library/Frameworks")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -arch ${ARCHFLAGS}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -arch ${ARCHFLAGS} -F/Library/Frameworks")
 elseif(MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")   # Enable multi-processor compilation (faster)
 endif()
