--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,9 @@
-#  SuperTuxKart - a fun racing game with go-kart
 #  Copyright (C) 2020-2021 Jacob Burroughs <maths22@gmail.com>
 #                2020-2021 A. Semphris <semphris@protonmail.com>
 #
-#  This program is free software; you can redistribute it and/or
-#  modify it under the terms of the GNU General Public License
-#  as published by the Free Software Foundation; either version 3
-#  of the License, or (at your option) any later version.
-#
-#  This program is distributed in the hope that it will be useful,
-#  but WITHOUT ANY WARRANTY; without even the implied warranty of
-#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#  GNU General Public License for more details.
-#
-#  You should have received a copy of the GNU General Public License
-#  along with this program; if not, write to the Free Software
-#  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+#  Released under the Creative Commons Zero (CC0) license, available at:
+#    Legal code: https://creativecommons.org/publicdomain/zero/1.0/legalcode
+#    Information: https://creativecommons.org/share-your-work/public-domain/cc0/
 
 
 
