--- a/data/supertuxkart.desktop
+++ b/data/supertuxkart.desktop
@@ -13,6 +13,7 @@ GenericName[es]=Un juego de carreras de karts en 3D de código abierto.
 GenericName[eu]=Kart lasterketetako 3D jolas librea
 GenericName[fi]=Avoimen lähdekoodin kolmiulotteinen kilpa-ajopeli
 GenericName[fr]=Un jeu libre de course de karts en 3D
+GenericName[gd]=Geama rèisidh chartaichean 3D le bun-tùs fosgailte
 GenericName[he]=משחק תחרויות קארטינג תלת־ממדי בקוד פתוח
 GenericName[hu]=Egy 3D-s, nyílt forráskódú gokartverseny játék
 GenericName[id]=Sebuah permainan balap kart 3D sumber-terbuka
@@ -24,6 +25,8 @@ GenericName[pl]=Trójwymiarowe wyścigi gokartów open-source
 GenericName[pt_BR]=Um jogo de corrida de kart 3D de código aberto
 GenericName[pt]=Um jogo 3D de karting com mascotes de aplicativos open source.
 GenericName[ru]=Свободная трёхмерная гоночная игра на картах
+GenericName[sr]=Игра тркања колицима слободног кода
+GenericName[sv]=Ett 3D-racingspel med öppen källkod
 GenericName[tr]=3D açık kaynaklı kart yarış oyunu
 GenericName[zh_CN]=一个三维开源赛车游戏
 GenericName[zh_HK]=3D 開源卡丁車賽車遊戲
@@ -44,6 +47,7 @@ Keywords[de]=tux;spiel;rennen;
 Keywords[es]=tux;juego;carreras;
 Keywords[fi]=tux;game;race;peli;ralli;kilpa-ajo;autopeli;
 Keywords[fr]=tux;jeu;course;
+Keywords[gd]=tux;game;race;geama;rèis;rèiseadh;
 Keywords[he]=tux;game;race;טקס;טאקס;טוקס;משחק;מרוץ;מרוצים;מירוץ;מירוצים;
 Keywords[hu]=tux;játék;verseny;
 Keywords[id]=tux;permainan;balapan;
@@ -55,6 +59,8 @@ Keywords[pt_BR]=tux;jogo;corrida;
 Keywords[pt]=tux;jogo;corrida
 Keywords[ro]=tux;joc;cursa
 Keywords[ru]=такс;игра;гонка;
+Keywords[sr]=такс;игра;трка;тукс;игрица;
+Keywords[sv]=tux;spel;tävla;
 Keywords[tr]=tux;oyun;yarış;
 Keywords[zh_CN]=企鹅、游戏、赛车
 Keywords[zh_HK]=tux;game;race;
