Update translation source, appdata and desktop file

--- a/data/supertuxkart.desktop
+++ b/data/supertuxkart.desktop
@@ -21,6 +21,7 @@ GenericName[it]=Un gioco open-source 3D di corse su kart
 GenericName[ja]=オープンソースな3Dレーシングカートゲームです
 GenericName[ko]=3D 오픈소스 카트 경주 게임
 GenericName[nl]=Een open source 3D kartracespel
+GenericName[nn]=Eit racerspel i 3D med open kjeldekode
 GenericName[pl]=Trójwymiarowe wyścigi gokartów open-source
 GenericName[pt_BR]=Um jogo de corrida de kart 3D de código aberto
 GenericName[pt]=Um jogo 3D de karting com mascotes de aplicativos open source.
@@ -54,6 +55,7 @@ Keywords[id]=tux;permainan;balapan;
 Keywords[it]=tux;gioco;gara;
 Keywords[ko]=턱스;게임;경주
 Keywords[nl]=tux;game;race;spel;kart;super;auto;parcours;
+Keywords[nn]=tux;spel;billøp;racerspel;
 Keywords[pl]=tux;gra;wyścigi;
 Keywords[pt_BR]=tux;jogo;corrida;
 Keywords[pt]=tux;jogo;corrida
